Move the Caddyfile config inside the docker compose

--- a/.env.example.chroma
+++ b/.env.example.chroma
@@ -3,3 +3,5 @@ BEARER_TOKEN="<bearer_token>"
 OPENAI_API_KEY="<openai_api_key>"
 CHROMA_IN_MEMORY="<true_or_false>"
 CHROMA_PERSISTENCE_DIR="<storage_path>"
+REVERSE_PROXY_FQDN="rag.example.com"
+REVERSE_PROXY_PORT="443"
